# substreams-sink-kv

./: .gitignore  .goreleaser.yaml  .goreleaser.yml  .sfreleaser  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  WASM_CHANGELOG.md  buf.gen.yaml  go.mod  go.sum  substreams.yaml
.github/workflows/: docker.yml  main.yml
cmd/substreams-sink-kv/: helpers.go  inject.go  logging.go  main.go  root.go  run.go  serve.go  setup.go  utils.go
connect-web-example/: README.md  buf.gen.yaml  package.json
connect-web-example/src/: App.tsx
db/: cursor.go  db.go  db_test.go  flush.go  init_test.go  interface.go  mock.go  mock_test.go  ops.go  ops_test.go
devel/: substreams-sink-kv
devel/docker/: Dockerfile.builder  Dockerfile.goreleaser  Dockerfile.runtime  push.sh
devel/local-inject/: start.sh
examples/wasm-query-service/blockmeta_wasm_query/: Cargo.toml  build.sh  rust-toolchain.toml
examples/wasm-query-service/blockmeta_wasm_query/proto/: service.proto
examples/wasm-query-service/blockmeta_wasm_query/src/: helper.rs  lib.rs
examples/wasm-query-service/blockmeta_wasm_query/src/pb/: eth.block_meta.v1.rs  eth.service.v1.rs
pb/: generate.sh  last_generate.txt
proto/: buf.gen.yaml  buf.yaml
server/: connect_web.go  interface.go
sinker/: metrics.go  sinker.go  stats.go
src/: README.md  externs.rs  helpers.rs  lib.rs  memory.rs  store.rs
wasmquery/: codec.go  config.go  config_test.go  engine.go  engine_test.go  handler.go  init_test.go  instance.go  interface.go  pool.go  request.go  server.go  server_test.go  vm.go  vm_test.go  wasm_extension.go
(+101 files in other folders)
