[package]
name = "substreams-sink-kv"
version = "0.1.2"
edition = "2021"
description = "Substreams kv sink module"
authors = ["StreamingFast Contributors <team@streamingfast.io>"]
license = "Apache-2.0"
homepage = "https://substreams.streamingfast.io/"
repository = "https://github.com/streamingfast/substreams-database-change"
readme = "./src/README.md"
keywords = [ "substreams", "streamingfast", "firehose", "thegraph", "entity"]
categories = ["api-bindings", "external-ffi-bindings", "wasm"]
rust-version = "1.60"

[dependencies]
prost = "^0.11.0"
prost-types = "^0.11.0"
base64 = "0.13.0"
substreams = "^0.5.0"
