[package]
name = "blockmeta-wasm-query"
version = "0.1.0"
authors = ["StreamingFast"]
edition = "2018"

[lib]
name = "wasm_query"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
num-integer = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasmedge-bindgen = "0.4.1"
wasmedge-bindgen-macro = "0.4.1"
substreams-sink-kv = "0.1.3"
prost = "^0.11.0"
prost-types = "^0.11.0"